SERVER-45233 Indexed array inequality fixed to use correct bounds

create mode 100644 jstests/core/array_comparison_correctness.js
 create mode 100644 jstests/core/array_index_and_nonIndex_consistent.js

(cherry picked from commit 52e7950cae37ef3783b05840c04abbbe383fa1ff)
(cherry picked from commit e3fba401e6e75b26cc2e5d363ad331dff749cfbf)