jstests/core/array_match4.js
@@ -25,6 +25,4 @@ print('explain for ' + tojson(query_gte, '', true) + ' = ' + tojson(explain));
 
 // number of documents returned by indexes query should be consistent
 // with non-indexed case.
-// XXX: The following assertion documents current behavior.
-// XXX: 2.4 and 2.6 both return 0 documents.
-assert.eq(0, t.find(query_gte).itcount(), '$gte (with index)');
+assert.eq(1, t.find(query_gte).itcount(), '$gte (with index)');
